# myownProject

./: .env  .gitignore  README.md  celery_app.py  celeryconfig.py  dump.rdb  firebase_config.py  main.py  merge.py  models_config.json  proxy_manager.py  pyproject.toml  requirements-ec2.txt  requirements.txt  task_router.py  task_status.py  utils.py  ytdwnld.py
fastapi-rvc/app/: main.py  rvc_service.py
fastapi_rvc/: .env  pyproject.toml
fastapi_rvc/app/: rvc_service.py  test_env.py
fastapi_rvc/i18n/: i18n.py  scan_i18n.py
fastapi_rvc/rvc/lib/infer_pack/: attentions.py  models.py  modules.py
fastapi_rvc/rvc/lib/train/: data_utils.py  process_ckpt.py  utils.py
fastapi_rvc/rvc/modules/train/: extract_feature_print.py  preprocess.py  train.py
fastapi_rvc/rvc/modules/train/extract/: extract_f0_print.py  extract_f0_rmvpe.py  extract_f0_rmvpe_dml.py
fastapi_rvc/rvc/modules/vc/: modules.py
music-clone/: celery_app.py  celeryconfig.py  main.py
music-clone/tasks/: __init__.py  convert.py  download.py  merge.py  separate.py
my_audio_separator/: Dockerfile.cuda12  do_it.py  main.py
my_audio_separator/audio_separator/separator/architectures/: mdxc_separator.py
scripts/: merge.py  ytdwnld.py
tasks/: __init__.py  cleanup_files.py  convert.py  download.py  merge.py  process_audio.py  separate.py  train_task.py  update_status.py
training/: click_train.py  extract_feature.py  preprocess.py
